[project]
name = "huggingface-agent-course"
version = "0.1.0"
description = "The HuggingFace Agent Course is designed to take you from beginner to expert in understanding, using, and building AI Agents. The course covers the theory, design, and practice of AI Agents, and teaches you how to use established AI Agent libraries like smolagents, LangChain, and LlamaIndex."
authors = [
    { name = "Quentin H. Reul",email = "qreul@expert.ai"}
]
readme = "README.md"
keywords = ["HuggingFace", "agentic ai", "learning"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://huggingface.co/learn/agents-course/"
Repository = "https://github.com/qhreul/huggingface-agent-course"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
huggingface_hub = "^0.29"
ipykernel = "^6.29"
python-dotenv = "^1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
